# ComputerArchitechureAndOperatingSystems-II

./: README.md
inf13-0/: CMakeLists.txt  main  main.c  p  r
inf13-1/: CMakeLists.txt  main.c  r
inf13-2/: CMakeLists.txt  a  m  main  main.c  t  test.c
inf13-2-test/: CMakeLists.txt  m
inf14-0/: CMakeLists.txt  boing  boing.c  m  main.c
inf15-0/: CMakeLists.txt  main.c
inf15-1/: CMakeLists.txt  m  main.c
inf16-0/: CMakeLists.txt  main.c
inf16-1/: CMakeLists.txt  main.c
inf17-0/: CMakeLists.txt  main.c
inf17-1/: CMakeLists.txt  main.c
inf18-0/: CMakeLists.txt  main.c
inf18-1/: CMakeLists.txt  main.c
inf19-0/: CMakeLists.txt  main.c
inf19-1/: CMakeLists.txt  main.c
inf20-0/: CMakeLists.txt  main.c
inf20-1/: CMakeLists.txt  main.c
inf20-2/: CMakeLists.txt  e  main.c
inf21-0/: CMakeLists.txt  main.c
inf21-1/: CMakeLists.txt  main.c
inf22-0/: main.c
inf22-1/: CMakeLists.txt  main.c  ping  ping.c
inf22-2/: CMakeLists.txt  main.c
inf22_0/: CMakeLists.txt
inf23-0/: CMakeLists.txt  main.c
inf23-1/: CMakeLists.txt  hellno  hellno.txt  main.c
inf23-2/: CMakeLists.txt  main.c
inf24-0/: error.txt  joe_biden  main.c  pizza  test
inf24-1/: CMakeLists.txt  main.cpp  pizza
inf24-1/joe_biden/: 1.txt  2.txt
inf24-1/joe_biden/acos/: acos
inf24-1/pizza_time/watching/: 2.txt
inf24-1/victor_yacovlev/: 1.txt
inf24-1/victor_yacovlev/watching/: 2.txt
inf25-0/: CMakeLists.txt  main.c
inf25-1/: CMakeLists.txt  main.c
